SEO: update html meta elements

--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=`, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="memory, card, game, playing, brain, testing, fun">
+    <meta name="description" content="Enjoy a fun card memory game!">
+    <meta name="author" content="Adam Michael Fairley">
+
+
+
+    <title>Memory Cards</title>
 </head>
 <body>
     
