--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <meta name="description" content="Enjoy a fun card memory game!">
     <meta name="author" content="Adam Michael Fairley">
 
+    <!-- Bootstrap Link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- Fontawesome Link -->
+    <script src="https://kit.fontawesome.com/e1041abfbd.js" crossorigin="anonymous"></script>
+
+    <!-- Personal CSS stylesheet link -->
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Memory Cards</title>
 </head>
 <body>
     
+
+
+    <!-- Bootstrap javascript link-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 </body>
 </html>
