build: add HTML elements for header and footer

--- a/index.html
+++ b/index.html
@@ -23,10 +23,76 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/assets/favicon/site.webmanifest">
 
-    <title>Memory Cards</title>
+    <title>Memory Card Game</title>
 </head>
 <body>
-    
+    <!-- Navigation bar -->
+    <header class="container-fluid row g-0 w95" id="header-section">
+        <!-- Logo -->
+        <div class="col-6" id="header-logo">
+            <a href="index.html" aria-label = "Memory card game site logo and link to homepage">
+                <h1>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-diamond"></i>
+                    <span>Memory Card Game</span>
+                </h1>
+            </a>
+        </div>
+        <!-- Navbar -->
+        <div class="col-6">
+            <nav id="nav">
+                <ul class = "row g-0 list-inline">
+                    <!-- Navbar list items -->
+                    <li class = "col-4">
+                        <a href="index.html" aria-label ="Go back to the website homepage">
+                            <i class="fa fa-home" aria-hidden="true"></i>
+                            <p>
+                                Home
+                            </p>
+                        </a>
+                    </li>
+                    <li class = "col-4">
+                        <a href="how_to_play.html" aria-label ="Go to the how to play page">
+                            <i class="fa-regular fa-circle-question"></i>
+                            <p>
+                                How to play
+                            </p>
+                        </a>
+                    </li>
+                    <li class = "col-4">
+                        <a href="contact_me.html" aria-label ="Go to the contact me page">
+                            <i class="fa-regular fa-address-book"></i>
+                            <p>
+                                Contact me
+                            </p>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div id="middle">
+            
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer id="footer" class="container-fluid row g-0">
+        <!-- Empty left hand side-->
+        <div class="col-2"></div>
+        <!-- Site Logo -->
+        <div class="col 8">
+            <a href="index.html" aria-label="Memory card game site logo and link to homepage">
+                <h2>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-diamond"></i>
+                    <span>Memory Card Game</span>
+                </h2>
+            </a>
+        </div>
+    </footer>
 
 
     <!-- Bootstrap javascript link-->
