build: finish html elements for header and footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <!-- Navigation bar -->
-    <header class="container-fluid row g-0 w95" id="header-section">
+    <header class="container-fluid row g-0" id="header-section">
         <!-- Logo -->
         <div class="col-6" id="header-logo">
             <a href="index.html" aria-label = "Memory card game site logo and link to homepage">
@@ -73,23 +73,26 @@
     </header>
 
     <main>
-        <div id="middle">
-            
-        </div>
     </main>
 
     <!-- Footer -->
     <footer id="footer" class="container-fluid row g-0">
         <!-- Empty left hand side-->
-        <div class="col-2"></div>
+        <div class="col-1"></div>
         <!-- Site Logo -->
-        <div class="col 8">
+        <div class="col-10">
             <a href="index.html" aria-label="Memory card game site logo and link to homepage">
                 <h2>
                     <i class="fa-solid fa-heart"></i>
                     <i class="fa-solid fa-diamond"></i>
                     <span>Memory Card Game</span>
                 </h2>
+            </a>
+        </div>
+        <div class = "col-1">
+            <a href="https://github.com/amfairley" target="_blank" rel="noopener" aria-label="Go to developer's github page">
+                <i class="fa-brands fa-github"></i>
+                <p>GitHub</p>
             </a>
         </div>
     </footer>
