--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
 
     <title>Memory Card Game</title>
 </head>
@@ -73,6 +73,48 @@
     </header>
 
     <main>
+        <!-- Game area -->
+        <section class = "row container-fluid g-0 justify-content-around" id = "game-area">
+            <div class="col-6 col-sm-4 col-lg-2 card-div">
+                <img src="assets/images/cards/ac.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4  col-lg-2 card-div">
+                <img src="assets/images/cards/2c.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/3c.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/4c.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/5c.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/6c.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/7c.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/8c.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/9c.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/10c.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/jc.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/qc.png" class = "card-image">
+            </div>
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
+                <img src="assets/images/cards/kc.png" class = "card-image">
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
@@ -102,5 +144,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
+
+    <!-- Personal javascript link-->
+    <script src="assets/scripts/script.js"></script>
 </body>
 </html>
