build: add game buttons in button area

--- a/index.html
+++ b/index.html
@@ -75,45 +75,14 @@
     <main>
         <!-- Game area -->
         <section class = "row container-fluid g-0 justify-content-around" id = "game-area">
-            <div class="col-6 col-sm-4 col-lg-2 card-div">
-                <img src="assets/images/cards/ac.png" class = "card-image">
+            <div class= "col-12" id="button-section">
+                <button type=>Reset</button>
+                <button>Play now</button>
+                <input type="number" id="quantity" min="1" max="13">
+                <button id="correct-length">Apply length</button>
+                <button>Guess</button>
             </div>
-            <div class="col-6 col-sm-4  col-lg-2 card-div">
-                <img src="assets/images/cards/2c.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/3c.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/4c.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/5c.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/6c.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/7c.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/8c.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/9c.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/10c.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/jc.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/qc.png" class = "card-image">
-            </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 card-div">
-                <img src="assets/images/cards/kc.png" class = "card-image">
-            </div>
+
         </section>
     </main>
 
