build: link jQuery in head element

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
 
+    <!-- jQuery link -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+
     <title>Memory Card Game</title>
 </head>
 <body>
@@ -79,7 +83,7 @@
                 <button type=>Reset</button>
                 <button>Play now</button>
                 <input type="number" id="quantity" min="1" max="13">
-                <button id="correct-length">Apply length</button>
+                <button id="sequence-length">Apply length</button>
                 <button>Guess</button>
             </div>
 
