style: add hidden style to play button from the start

--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
         <section class = "row container-fluid g-0 justify-content-around" id = "game-area">
             <div class= "col-12" id="button-section">
                 <button type=>Reset</button>
-                <button id="play">Play now</button>
+                <button id="play" class="hidden">Play now</button>
                 <input type="number" id="quantity" min="1" max="13">
                 <button id="sequence-length">Apply length</button>
-                <button>Guess</button>
+                <button id="guess">Guess</button>
+                <button class="submit-guess">Test</button>
             </div>
             <table id="guessing-table" class="hidden">
                 <thead>
