function: add display box for chosen sequence length

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         <!-- Game area -->
         <section class = "row container-fluid g-0 justify-content-around" id = "game-area">
             <div class= "col-12" id="button-section">
+                <div id="length-box">
+                    <p>Number of cards: <span id="card-length-display"></span></p>
+                </div>
                 <button type=>Reset</button>
                 <button id="play" class="hidden">Play now</button>
                 <input type="number" id="quantity" min="1" max="13">
