function: make guess button hidden from start

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <section class = "row container-fluid g-0 justify-content-around" id = "game-area">
             <div class= "col-12" id="button-section">
                 <div id="length-box">
-                    <p>Number of cards: <span id="card-length-display"></span></p>
+                    <p>Number of cards: <span id="sequence-length-display"></span></p>
                 </div>
                 <button type=>Reset</button>
                 <button id="play" class="hidden">Play now</button>
                 <input type="number" id="quantity" min="1" max="13">
                 <button id="sequence-length">Apply length</button>
-                <button id="guess">Guess</button>
+                <button id="guess" class="hidden">Guess</button>
                 <button class="submit-guess">Test</button>
             </div>
             <table id="guessing-table" class="hidden">
