function: add id to reset button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div id="length-box">
                     <p>Number of cards: <span id="sequence-length-display"></span></p>
                 </div>
-                <button type=>Reset</button>
+                <button id="reset">Reset</button>
                 <button id="play" class="hidden">Play now</button>
                 <input type="number" id="quantity" min="1" max="13">
                 <button id="sequence-length">Apply length</button>
