--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
                 </div>
                 <button id="reset">Reset</button>
                 <button id="play" class="hidden">Play now</button>
-                <input type="number" id="quantity" min="1" max="13">
+                <input type="number" id="quantity" min="1" max="13" placeholder="Select sequence length">
                 <button id="sequence-length">Apply length</button>
                 <button id="guess" class="hidden">Guess</button>
             </div>
+
             <table id="guessing-table" class="hidden">
                 <thead>
                     <th scope="col">Order</th>
@@ -100,6 +101,15 @@
                 </tbody>
             </table>
         </section>
+        <div class = "colour-div" id="cdiv1">
+            <p>#f5f5f5</p>
+        </div>
+        <div class = "colour-div" id="cdiv2">
+            <p>#333A3F</p>
+        </div>
+        <div class = "colour-div" id="cdiv3">
+            <p>#CF1020</p>
+        </div>
     </main>
 
     <!-- Footer -->
