--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Navbar -->
         <div class="col-6">
             <nav id="nav">
-                <ul class = "row g-0 list-inline">
+                <ul class = "row g-0 list-inline upper-case">
                     <!-- Navbar list items -->
                     <li class = "col-4">
                         <a href="index.html" aria-label ="Go back to the website homepage">
@@ -101,15 +101,6 @@
                 </tbody>
             </table>
         </section>
-        <div class = "colour-div" id="cdiv1">
-            <p>#f5f5f5</p>
-        </div>
-        <div class = "colour-div" id="cdiv2">
-            <p>#333A3F</p>
-        </div>
-        <div class = "colour-div" id="cdiv3">
-            <p>#CF1020</p>
-        </div>
     </main>
 
     <!-- Footer -->
