build: complete desktop footer

--- a/index.html
+++ b/index.html
@@ -108,22 +108,21 @@
 
     <!-- Footer -->
     <footer id="footer" class="container-fluid row g-0">
-        <!-- Empty left hand side-->
-        <div class="col-1"></div>
         <!-- Site Logo -->
-        <div class="col-10">
-            <a href="index.html" aria-label="Memory card game site logo and link to homepage">
-                <h2>
-                    <i class="fa-solid fa-heart"></i>
-                    <i class="fa-solid fa-diamond"></i>
+        <div id="footer-logo">
+            <a href="index.html" aria-label="Memory card game site logo and link to homepage" id="logo-link-footer">
+                <h2 id="footer-logo-content">
+                    <i class="fa-solid fa-heart footer-logo-icon"></i>
+                    <i class="fa-solid fa-diamond footer-logo-icon"></i>
                     <span>Memory Card Game</span>
                 </h2>
             </a>
         </div>
-        <div class = "col-1">
-            <a href="https://github.com/amfairley" target="_blank" rel="noopener" aria-label="Go to developer's github page">
-                <i class="fa-brands fa-github"></i>
-                <p>GitHub</p>
+        <div id = "footer-github">
+            <a href="https://github.com/amfairley" target="_blank" rel="noopener" aria-label="Go to developer's github page" class="nav-link-black" id="github-link">
+                <p id="github-icon-top"><i class="fa-brands fa-github"></i></p>
+                <p id="github-text">GitHub</p>
+                <p id="github-icon-bottom"><i class="fa-brands fa-github"></i></p>
             </a>
         </div>
     </footer>
