refactor: update script.js link to game.js link

--- a/index.html
+++ b/index.html
@@ -134,6 +134,6 @@
     </script>
 
     <!-- Personal javascript link-->
-    <script src="assets/scripts/script.js"></script>
+    <script src="assets/scripts/game.js"></script>
 </body>
 </html>
