build: link transition JavaScript file

--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
 
-    <!-- Personal javascript link-->
+    <!-- Game JavaScript link-->
     <script src="assets/scripts/game.js"></script>
+
+    <!-- Transitions JavaScript link -->
+    <script src="assets/scripts/transitions.js"></script>
+
 </body>
 </html>
