refactor: wrap nav icon top with p tag

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <!-- Navbar list items -->
                     <li class = "nav-list-item">
                         <a href="index.html" aria-label ="Go back to the website homepage" class="nav-link-red active-page">
-                            <i class="fa fa-home nav-icon-top" aria-hidden="true"></i>
+                            <p class= "nav-icon-top"><i class="fa fa-home" aria-hidden="true"></i></p>
                             <p class="nav-item-name" id="home-text">
                                 Home
                             </p>
@@ -58,7 +58,7 @@
                     </li>
                     <li class = "nav-list-item">
                         <a href="how_to_play.html" aria-label ="Go to the how to play page" class="nav-link-black">
-                            <i class="fa-regular fa-circle-question nav-icon-top"></i>
+                            <p class="nav-icon-top"><i class="fa-regular fa-circle-question"></i></p>
                             <p class="nav-item-name" id="how-to-play-text">
                                 How to play
                             </p>
@@ -67,7 +67,7 @@
                     </li>
                     <li class = "nav-list-item">
                         <a href="contact_me.html" aria-label ="Go to the contact me page" class="nav-link-red">
-                            <i class="fa-regular fa-address-book nav-icon-top"></i>
+                            <p class = "nav-icon-top"><i class="fa-regular fa-address-book"></i></p>
                             <p class="nav-item-name" id="contact-me-text">
                                 Contact me
                             </p>
