--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             </div>
             <div class= "col-12" id="button-section">
 
-                <button id="reset">Reset</button>
-                <button id="play" class="hidden">Play now</button>
+                <button id="reset" class="game-button">Reset</button>
+                <button id="play" class="game-button hidden">Play now</button>
                 <input type="number" id="quantity" min="1" max="13" placeholder="Select sequence length">
-                <button id="sequence-length">Apply length</button>
-                <button id="guess" class="hidden">Guess</button>
+                <button id="sequence-length" class="game-button">Apply length</button>
+                <button id="guess" class="game-button hidden">Guess</button>
             </div>
 
             <table id="guessing-table" class="hidden">
