refactor: rename placeholder for sequence length selector

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                 <button id="reset" class="game-button">Reset</button>
                 <button id="play" class="game-button hidden">Play now</button>
-                <input type="number" id="quantity" min="1" max="13" placeholder="Select sequence length">
+                <input type="number" id="quantity" min="1" max="13" placeholder="Number of Cards">
                 <button id="sequence-length" class="game-button">Apply length</button>
                 <button id="guess" class="game-button hidden">Guess</button>
             </div>
