function: move play button position and remove length select

--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
             <div class= "col-12" id="button-section">
 
                 <button id="reset" class="game-button">Reset</button>
-                <button id="play" class="game-button hidden">Play now</button>
                 <input type="number" id="quantity" min="1" max="13" placeholder="Number of Cards">
-                <button id="sequence-length" class="game-button">Apply length</button>
+                <button id="play" class="game-button">Play now</button>
                 <button id="guess" class="game-button hidden">Guess</button>
             </div>
             <div id="table-container">
