style: rename placeholder text for number select for clarity

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class= "col-12" id="button-section">
 
                 <button id="reset" class="game-button">Reset</button>
-                <input type="number" id="quantity" min="1" max="13" placeholder="Number of Cards">
+                <input type="number" id="quantity" min="1" max="13" placeholder="Pick up to 52 cards">
                 <button id="play" class="game-button">Play now</button>
                 <button id="guess" class="game-button hidden">Guess</button>
             </div>
