style: rename reset text and wrap in div for styling

--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
                 <p id="length-box-icon-bottom"><i class="fa-solid fa-hashtag"></i></p>
             </div>
             <div class= "col-12" id="button-section">
-
-                <button id="reset" class="game-button">Reset</button>
+                <div id="reset-container">
+                    <button id="reset" class="game-button">Reset Game</button>
+                </div>
                 <input type="number" id="quantity" min="1" max="13" placeholder="Pick up to 52 cards">
                 <button id="play" class="game-button">Play now</button>
                 <button id="guess" class="game-button hidden">Guess</button>
