function: add modal for invalid guess

--- a/index.html
+++ b/index.html
@@ -36,11 +36,22 @@
         <div class="modal-container">
             <p class="modal-top-icon"><i class="fa-solid fa-circle-exclamation"></i></p>
             <h2 id="modal-sequence-header">Oh No!</h2>
-            <div ip="modal-sequence-text">
-                <p id="modal-sequence-text">We can't possibly deal that many cards, please enter a number between 1 and 52.</p>
+            <div id="modal-sequence-text">
+                <p>We can't possibly deal that many cards, please enter a number between 1 and 52.</p>
             </div>
             <button class="game-button" id="modal-sequence-button">OK</button>
             <p class="modal-bottom-icon" id="modal-sequence-icon"><i class="fa-solid fa-circle-exclamation"></i></p>
+        </div>
+    </div>
+    <div class="game-modal" id="guess-error-modal">
+        <div class="modal-container">
+            <p class="modal-top-icon"><i class="fa-solid fa-circle-exclamation"></i></p>
+            <h2 id="modal-guess-header">Oh No!</h2>
+            <div id="modal-guess-text">
+                <p>Please enter a valid card value and valid suit to submit your guess.</p>
+            </div>
+            <button class="game-button" id="modal-guess-button">OK</button>
+            <p class="modal-bottom-icon" id="modal-guess-icon"><i class="fa-solid fa-circle-exclamation"></i></p>
         </div>
     </div>
     <!-- Navigation bar -->
