function: update anchor tag for contact me to div for modal

--- a/index.html
+++ b/index.html
@@ -110,15 +110,6 @@
                 <ul class = "row g-0 list-inline upper-case" id="nav-list">
                     <!-- Navbar list items -->
                     <li class = "nav-list-item">
-                        <a href="index.html" aria-label ="Go back to the website homepage" class="nav-link-red active-page">
-                            <p class= "nav-icon-top"><i class="fa fa-home" aria-hidden="true"></i></p>
-                            <p class="nav-item-name" id="home-text">
-                                Home
-                            </p>
-                            <p class="nav-icon-bottom" id="nav-icon-bottom-home"><i class="fa fa-home" aria-hidden="true"></i></p>
-                        </a>
-                    </li>
-                    <li class = "nav-list-item">
                         <a href="how_to_play.html" aria-label ="Go to the how to play page" class="nav-link-black">
                             <p class="nav-icon-top"><i class="fa-regular fa-circle-question"></i></p>
                             <p class="nav-item-name" id="how-to-play-text">
@@ -128,13 +119,13 @@
                         </a>
                     </li>
                     <li class = "nav-list-item">
-                        <a href="contact_me.html" aria-label ="Go to the contact me page" class="nav-link-red">
+                        <div aria-label ="Open the contact me modal" class="nav-link-red">
                             <p class = "nav-icon-top"><i class="fa-regular fa-address-book"></i></p>
                             <p class="nav-item-name" id="contact-me-text">
                                 Contact me
                             </p>
                             <p class="nav-icon-bottom" id="nav-icon-bottom-contact"><i class="fa-regular fa-address-book"></i></p>
-                        </a>
+                        </div>
                     </li>
                 </ul>
             </nav>
