function: add ID to contact modal to link in JavaScript

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </a>
                     </li>
                     <li class = "nav-list-item">
-                        <div aria-label ="Open the contact me modal" class="nav-link-red">
+                        <div aria-label ="Open the contact me modal" class="nav-link-red" id="contact-modal-link">
                             <p class = "nav-icon-top"><i class="fa-regular fa-address-book"></i></p>
                             <p class="nav-item-name" id="contact-me-text">
                                 Contact me
