feature: add how-to-play modal

--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
             <button class="game-button" id="modal-contact-close">Close</button>
         </div>
     </div>
+    <!-- How to play modal -->
+    <div class="game-modal" id="how-to-play-modal">
+        <div class="modal-container">
+            <h2 id="modal-how-to-play-header">How to play</h2>
+            <p id="how-to-intro">The goal is to memorise the order of shuffled playing cards. Can you memorise the whole deck?</p>
+            <div id="modal-how-to-play-text">
+                <p>&#9824 Choose between 1 and 52 cards to memorise and enter this value into the box.</p>
+                <p>&#9830 Click play now to lock in your choice and display the cards</p>
+                <p>&#9827 When you have memorised the cards, click on guess to hide the cards</p>   
+                <p>&#9829 Test your memory by filling out the order of the cards in the table. Submit your answers to see if you are right!</p>
+            </div>
+            <button class="game-button" id="modal-how-to-play-button">Close</button>
+        </div>
+    </div>
     <!-- Error modal for invalid sequence length -->
     <div class="game-modal" id="sequence-error-modal">
         <div class="modal-container">
