refactor: change how to play from anchor to div

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                 <ul class = "row g-0 list-inline upper-case" id="nav-list">
                     <!-- Navbar list items -->
                     <li class = "nav-list-item">
-                        <a href="how_to_play.html" aria-label ="Go to the how to play page" class="nav-link-black">
+                        <div aria-label ="Go to the how to play page" class="nav-link-black" id="how-to-play-modal-link">
                             <p class="nav-icon-top"><i class="fa-regular fa-circle-question"></i></p>
                             <p class="nav-item-name" id="how-to-play-text">
                                 How to play
                             </p>
                             <p class="nav-icon-bottom" id="nav-icon-bottom-how"><i class="fa-regular fa-circle-question"></i></p>
-                        </a>
+                        </div>
                     </li>
                     <li class = "nav-list-item">
                         <div aria-label ="Open the contact me modal" class="nav-link-red" id="contact-modal-link">
