feature: add a background to the modals

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <p class="modal-bottom-icon" id="modal-results-icon"><i class="fa-solid fa-circle-exclamation"></i></p>
         </div>
     </div>
+    <div id="modal-background"></div>
     <!-- Navigation bar -->
     <header class="container-fluid row g-0" id="header-section">
         <!-- Logo -->
