--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <form id="contact-me-form">
                 <label class="contact-label" for="name">Name</label>
                 <br>
-                <input type="text" name="name" id="name" placeholder="Derren Brown" required>
+                <input type="text" name="from_name" id="name" placeholder="Derren Brown" required>
                 <br>
-                <label class="contact-label" for="email">Email</label>
+                <label class="contact-label" for="email" id="email">Email</label>
                 <br>
-                <input type="email" name="email" id="email" placeholder="derren@brown.com" required>
+                <input type="email" name="email_id" id="email" placeholder="derren@brown.com" required>
                 <br>
                 <textarea id="contact-message" name="message" rows="10" cols="80" required></textarea>
                 <br>
@@ -208,6 +208,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
+
+    <!-- emailjs SDK link-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <!-- initialise emailjs-->
+    <script type="text/javascript">
+        (function() {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init({
+              publicKey: "5Il-1n7VCJG_mw70w",
+            });
+        })();
+    </script>
+    <!-- Link emailjs.js -->
+    <script src="assets/scripts/emailjs.js"></script>
 
     <!-- Game JavaScript link-->
     <script src="assets/scripts/game.js"></script>
